--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #000;
 }
 
 body {
@@ -13,7 +14,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #000;
+  color: rgb(0, 0, 0);
 }
 
 p {
@@ -33,11 +34,11 @@ h2,
 h3 {
   font-weight: 600;
   margin-bottom: 10px;
+  color: #fff;
 }
 
 .container {
   width: 100%;
-  max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
   text-align: center;
@@ -50,6 +51,7 @@ h3 {
   padding: 20px 0;
   border-bottom: 1px solid #e6e6e6;
   margin-bottom: 60px;
+  color: #fff;
 }
 
 .header ul {
@@ -65,10 +67,11 @@ h3 {
 .header ul li a {
   display: flex;
   align-items: center;
+  color: #fff;
 }
 
 .header ul li a:hover {
-  color: #777;
+  color: rgb(207, 207, 207);
 }
 
 .header ul li a svg {
@@ -83,29 +86,7 @@ h3 {
 }
 
 .heading p {
-  color: #828282;
-}
-
-.goals {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-}
-
-.goal {
-  background-color: #f4f4f4;
-  margin: 10px 0;
-  padding: 20px 0 10px;
-  position: relative;
-}
-
-.goal .close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  cursor: pointer;
-  border: none;
-  background: none;
+  color: #cfcfcf;
 }
 
 .form,
