--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #000;
+  background-color: #171515;
 }
 
 body {
@@ -19,6 +19,7 @@ a {
 
 p {
   line-height: 1.7;
+  color: #fff;
 }
 
 ul {
@@ -29,18 +30,29 @@ li {
   line-height: 2.2;
 }
 
-h1,
-h2,
-h3 {
+h1
+{
   font-weight: 600;
   margin-bottom: 10px;
-  color: #fff;
+  background: -webkit-linear-gradient(#ff764c, #e7b146);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+h3
+{
+  font-weight: 400;
+  margin-bottom: 50px;
+  color: rgb(178, 178, 178);
 }
 
 .container {
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.center {
   text-align: center;
 }
 
@@ -49,7 +61,7 @@ h3 {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid #f49149;
   margin-bottom: 60px;
   color: #fff;
 }
@@ -70,23 +82,41 @@ h3 {
   color: #fff;
 }
 
-.header ul li a:hover {
-  color: rgb(207, 207, 207);
+.hoverGray a:hover {
+  color:  #f49149;
+  background: -webkit-linear-gradient(#ff764c, #e7b146);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .header ul li a svg {
   margin-right: 5px;
 }
 
-.heading {
-  font-size: 2rem;
-  font-weight: 700;
-  margin-bottom: 50px;
-  padding: 0 20px;
+.homeContainer {
+  padding: 1em;
 }
 
-.heading p {
-  color: #cfcfcf;
+.heading {
+  font-size: 2rem;
+  margin-bottom: 50px;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.homeText p {
+  line-height: 3em;
+  font-size: 1.25em;
+  margin-left: 15em;
+}
+
+.marginButton {
+  margin-top: 3em;
+}
+
+.register,
+.login {
+  text-align: center;
 }
 
 .form,
@@ -114,40 +144,6 @@ h3 {
   text-align: left;
   display: block;
   margin: 0 0 5px 3px;
-}
-
-.btn {
-  padding: 10px 20px;
-  border: 1px solid #000;
-  border-radius: 5px;
-  background: #000;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 700;
-  cursor: pointer;
-  text-align: center;
-  appearance: button;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.btn svg {
-  margin-right: 8px;
-}
-
-.btn-reverse {
-  background: #fff;
-  color: #000;
-}
-
-.btn-block {
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.btn:hover {
-  transform: scale(0.98);
 }
 
 .loadingSpinnerContainer {
@@ -193,4 +189,8 @@ h3 {
   .heading p {
     font-size: 1.5rem;
   }
+}
+
+.myGold {
+  color: #EBB94C;
 }
