--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,6 +52,27 @@ h3
   padding: 0 20px;
 }
 
+
+.containerBody {
+  width: 60%;
+  margin: 0 auto;
+  padding: 0 20px;
+  border: 1px solid #f49149;
+  border-radius: 10px;
+}
+
+.containerBox {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding: 0 20px;
+}
+
+.textSpace p {
+  line-height: 50px;
+}
+
 .center {
   text-align: center;
 }
@@ -64,6 +85,8 @@ h3
   border-bottom: 1px solid #f49149;
   margin-bottom: 60px;
   color: #fff;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .header ul {
@@ -107,7 +130,7 @@ h3
 .homeText p {
   line-height: 3em;
   font-size: 1.25em;
-  margin-left: 15em;
+  margin-left: 22.5%;
 }
 
 .marginButton {
@@ -115,7 +138,8 @@ h3
 }
 
 .register,
-.login {
+.login
+{
   text-align: center;
 }
 
