--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,6 +63,39 @@ h3
   padding: 0 20px;
 }
 
+.containerProfile {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 7%;
+  margin-bottom: 5%;
+  padding: 0 20px;
+}
+
+.containerLogin {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  padding: 0 20px;
+}
+
+.containerRegister {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 7%;
+  margin-bottom: 5%;
+  padding: 0 20px;
+}
+
+.containerFooter {
+  position: fixed;
+  left: 12%;
+  bottom: 0;
+  margin-bottom: 4%;
+  width: 76%;
+  padding: 0 20px;
+}
+
 .textSpace p {
   line-height: 50px;
 }
@@ -112,6 +145,7 @@ h3
 
 .homeContainer {
   padding: 5%;
+  margin-top: 5%;
 }
 
 .heading {
